# starter-rust-webuireact-rspack

./: .gitignore  BUILD_LOGGING.md  Cargo.toml  EVENT_BUS_DOCS.md  README.md  app.config.toml  app.db  build-dist.sh  build-frontend-inline.js  build-frontend.js  build.rs  index.html  post-build.sh  run.sh
docs/: 01-overview.md  02-structure.md  03-features.md  04-getting-started.md  05-architecture.md  06-improvements.md
frontend/: build-logger.js  index.html  package.json  rspack.config.dev.ts  rspack.config.inline.ts  tsconfig.json
frontend/src/: main.tsx
src/: build_logger.rs  core.rs  event_bus.rs  handlers.rs  main.rs  websocket_manager.rs
src/build_logger/: display.rs  main.rs  mod.rs  progress.rs
src/core/: config.rs  database.rs  error.rs  logging.rs  mod.rs
src/event_bus/: bus.rs  types.rs
src/infrastructure/: mod.rs
src/models/: mod.rs
src/plugins/: counter.rs  mod.rs  system.rs  user.rs  window.rs
src/viewmodels/: counter.rs  mod.rs  system.rs  user.rs  utils.rs  window.rs
static/css/: index.85b27526.css  index.85ee72aa.css  index.85ee72aa.css.map
static/js/: 202.d495277b.js  202.d495277b.js.map  index.3309b354.js  index.3309b354.js.map  index.47811421.js  index.47811421.js.map  index.69864d14.js  index.69864d14.js.map  index.704841cd.js  index.704841cd.js.map  index.72bbc473.js  index.939e24ad.js  index.939e24ad.js.map  index.d7337485.js  index.d7337485.js.map  index.db0f8230.js  index.db0f8230.js.map  index.e5ecd4bc.js  index.e5ecd4bc.js.map  lib-polyfill.c7fb3a2b.js  lib-vue.1934806c.js  lib-vue.1934806c.js.LICENSE.txt  (+4 more)
(+18 files in other folders)
