[package]
name = "rustwebui-app"
version = "1.0.0"
edition = "2024"

[dependencies]
webui-rs = { git = "https://github.com/webui-dev/rust-webui", branch = "main" }
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
lazy_static = "1.4"

# Core utilities
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tiny_http = "0.12"
 mime_guess = "2.0"

[build-dependencies]
cc = "1.0"
toml = "0.8"
walkdir = "2.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wix]
category = "Application"
description = "Rust WebUI Application"

[profile.dev]
debug = false
